--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -30,7 +30,7 @@
 <div id="welcome">
     <h1>Welcome to the <span id="zf-name">Zend Framework!</span></h1>
 
-    <h3>This is your project's main page</h3>
+    <h3>This is your First github project main page</h3>
 
     <div id="more-information">
         <p><img src="http://framework.zend.com/images/PoweredBy_ZF_4LightBG.png" /></p>
